# digimatic

./: .gitignore  Cargo.toml  README.ja.md  README.md  diog.py
firmware/: communicator.py  config.py  decoder.py  diag.py  digi_txrx_try.py  hi-z_testcode.py  i18n.py  lang_ja.json  lanj_en.json  led_switch.py  lsb_nibble.py  main.py  model_caliper.py  pin_definitions.py  pin_difinitions.py  sim_driven.py  skelton_main.py  state_process.py  trial_CDC-commu_codes.py  validatino_rule.py  validation_rule.py
firmware/diagnostics/: diag.py  pin_mode_seeker.py  pin_register.py  utils.py
firmware/esp32-fw/: Cargo.toml  diagram.json  wokwi.toml
firmware/esp32-fw/.cargo/: config.toml
firmware/rp2040/: pin_definitions.py  sim_driven.py  state_process.py
firmware/rp2040_fw/: communicator.py  decoder.py  i18n.py  led_switch.py  main.py  model_caliper.py  pin_definitions.py  sim_driven.py  state_process.py  ui.py
firmware/sim/: model_caliper.py  sim_driven.py
firmware/test_tools/: busy-loop_wait.py  func_overhead_measure.py  hi-z_testcode.py  obsolate_receive_func.py  obsolate_validate_func.py
pc_tool/: Cargo.toml
pc_tool/example/: receiver.rs
pc_tool/src/: args.rs  communicator.rs  decoder_digi_frame.rs  errors.rs  execute_communicate.rs  frame.rs  frame_array_builder.rs  gui_app.rs  gui_main.rs  lib.rs  logger.rs  main.rs  parser.rs  port_prepare.rs  presentation.rs  receiver.rs  scanner.rs  scanner_of_pico_connection.rs  sender.rs  sim.rs  switcher.rs  validater.rs  validater_rx_frame.rs
pc_tool/src/sim/: execute_sim.rs  frame_array_builder.rs  generator.rs  (+2 more)
specification/: TODO.md  digimatic output format.md  mitutoyo_connectinog_cable_spec.rmd  seeed Studio XIAO RP2040.md  system_connecton_diagram.md
src/: decoder_digi_frame.rs  frame.rs  frame_array_builder.rs  gen_length_data.rs  generator.rs  lib.rs  main.rs  port_prepare.rs  port_preppare.rs  receiver.rs  sender.rs
