[package]
name = "esp32-fw"
version = "0.1.0"
authors = ["urnT1841 <260836856+urnT1841@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "esp32-fw"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }

[build-dependencies]
embuild = "0.33"
